--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.1.0
   velocity_x: ^4.1.0
   firebase_core: ^2.20.0
+  firebase_auth: ^4.12.1
 
 dev_dependencies:
   flutter_test:
